--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ethereumjs-account",
+  "name": "expansejs-account",
   "version": "2.0.3",
-  "description": "Encoding, decoding and validation of Ethereum's Account schema",
+  "description": "Encoding, decoding and validation of Expanse's Account schema",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ethereumjs/ethereumjs-account.git"
+    "url": "git+https://github.com/expansejs/expansejs-account.git"
   },
   "scripts": {
     "coverage": "istanbul cover ./test/index.js",
@@ -15,16 +15,17 @@
   },
   "keywords": [
     "ethereum",
+    "expnase",
     "account"
   ],
   "author": "mjbecze (mjbecze@gmail.com)",
   "license": "MPL-2.0",
   "bugs": {
-    "url": "https://github.com/ethereumjs/ethereumjs-account/issues"
+    "url": "https://github.com/expansejs/expansejs-account/issues"
   },
-  "homepage": "https://github.com/ethereumjs/ethereumjs-account#readme",
+  "homepage": "https://github.com/expansejs/expansejs-account#readme",
   "dependencies": {
-    "ethereumjs-util": "^5.0.0",
+    "expansejs-util": "^5.0.0",
     "rlp": "^2.0.0"
   },
   "devDependencies": {
